<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ActivityAdmin">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="45sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edUsername"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:autofillHints=""
        android:background="@drawable/forget"
        android:hint="@string/enter_admin_id"
        android:inputType="text"
        android:textColor="#A1887F"
        android:textColorHint="#A1887F"
        android:textSize="18sp"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/edPassword"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:background="@drawable/forget"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textColor="#A1887F"
        android:textColorHint="#A1887F"
        android:textSize="18sp"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button"
        android:text="@string/login"
        android:textSize="18sp"
        tools:ignore="TextSizeCheck,VisualLintButtonSize" />

</LinearLayout>